# Tiny-BASIC

./: .gitignore  CMakeLists.txt  script.sh
docs/: README.md
examples/: test.bas
include/cli/: arg_parser.hpp
include/interpreter/: interpreter.hpp
include/lexer/: keywords.hpp  lexer.hpp  lookup.hpp  token_types.hpp
include/logger/: logging.hpp
include/parser/: node.hpp  parser.hpp
src/: arg_parser.cpp  interpreter.cpp  lexer.cpp  logging.cpp  main.cpp  parser.cpp
